Set the puppet master.

--- a/puppet.conf
+++ b/puppet.conf
@@ -6,6 +6,7 @@ rundir=/var/run/puppet
 factpath=$vardir/lib/facter
 templatedir=$confdir/templates
 
+server=eddings.justdavis.com
 [master]
 # These are needed when the puppetmaster is run by passenger
 # and can safely be removed if webrick is used.
