Adding a note to help prevent future stupidity.

--- a/hiera.yaml
+++ b/hiera.yaml
@@ -1,6 +1,7 @@
 # Defines the configuration for Hiera within Puppet.
 # Reference: http://docs.puppetlabs.com/hiera/1/configuring.html
 # I've also symlinked the standard /etc/hiera.yaml config file to this one, to make testing things easier.
+# Note to self: Be sure to restart the puppetmaster service after editing this file.
 :backends:
   - yaml
 :yaml:
